--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,16 @@
 *.exe
 *.out
 *.app
+object-oriented-programming/.vs/object-oriented-programming/v16/.suo
+object-oriented-programming/.vs/object-oriented-programming/v16/Browse.VC.db
+object-oriented-programming/.vs/object-oriented-programming/v16/Browse.VC.db-wal
+object-oriented-programming/.vs/object-oriented-programming/v16/Browse.VC.db-shm
+object-oriented-programming/.vs/object-oriented-programming/v16/Browse.VC.opendb
+object-oriented-programming/.vs/object-oriented-programming/v16/ipch/AutoPCH/278aa506e0fb1b12/PRACTICE2[ARRAY].ipch
+object-oriented-programming/.vs/object-oriented-programming/v16/ipch/AutoPCH/801ce33f5e5688b0/OBJECT-ORIENTED-PROGRAMMING.ipch
+object-oriented-programming/.vs/object-oriented-programming/v16/ipch/AutoPCH/f93fee14812133eb/CIRCLE.ipch
+object-oriented-programming/.vs/object-oriented-programming/v16/ipch/AutoPCH/278aa506e0fb1b12/PRACTICE2[ARRAY].ipch
+object-oriented-programming/object-oriented-programming.sln
+object-oriented-programming/object-oriented-programming.vcxproj
+object-oriented-programming/object-oriented-programming.vcxproj.filters
+object-oriented-programming/object-oriented-programming.vcxproj.user
