--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,4 @@ object-oriented-programming/object-oriented-programming.sln
 object-oriented-programming/object-oriented-programming.vcxproj
 object-oriented-programming/object-oriented-programming.vcxproj.filters
 object-oriented-programming/object-oriented-programming.vcxproj.user
+object-oriented-programming/.vs/object-oriented-programming/v16/ipch/AutoPCH/278aa506e0fb1b12/PRACTICE2[ARRAY].ipch
