--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,4 @@ object-oriented-programming/object-oriented-programming.vcxproj.filters
 object-oriented-programming/object-oriented-programming.vcxproj.user
 object-oriented-programming/.vs/object-oriented-programming/v16/ipch/AutoPCH/278aa506e0fb1b12/PRACTICE2[ARRAY].ipch
 object-oriented-programming/.vs/object-oriented-programming/v16/ipch/AutoPCH/278aa506e0fb1b12/PRACTICE2[ARRAY].ipch
+/object-oriented-programming/.vs/object-oriented-programming/v16/ipch/AutoPCH/41e710f74549cda4/ZAGOTOVKA_STROKA.ipch
