--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,4 @@ object-oriented-programming/object-oriented-programming.vcxproj.user
 object-oriented-programming/.vs/object-oriented-programming/v16/ipch/AutoPCH/278aa506e0fb1b12/PRACTICE2[ARRAY].ipch
 object-oriented-programming/.vs/object-oriented-programming/v16/ipch/AutoPCH/278aa506e0fb1b12/PRACTICE2[ARRAY].ipch
 /object-oriented-programming/.vs/object-oriented-programming/v16/ipch/AutoPCH/41e710f74549cda4/ZAGOTOVKA_STROKA.ipch
+object-oriented-programming/.vs/object-oriented-programming/v16/ipch/AutoPCH/8333c9d8baf452b8/ZAGOTOVKA_STROKA.ipch
