--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@ object-oriented-programming/object-oriented-programming.sln
 object-oriented-programming/object-oriented-programming.vcxproj
 object-oriented-programming/object-oriented-programming.vcxproj.filters
 object-oriented-programming/object-oriented-programming.vcxproj.user
+object-oriented-programming/test.cpp
